Cleanup and remove invalid test
Removed a test that was testing code that could be changed over time and
since there was already a test for the same functionality was not needed